test/expected/explain_hc32.out
explain short char32_t x
              ^
15: error: "short char32_t" is illegal for built-in type
